# menu-server-demo

./: .dockerignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  flask_app.py  pyproject.toml  requirements.txt
.github/: copilot-instructions.md
.github/workflows/: docker-release.yml  lint.yml  test.yml
app/: __init__.py  cli.py  config.py  extensions.py  middleware.py
app/admin/: __init__.py  routes.py  views.py
app/api/: __init__.py
app/auth/: __init__.py
app/models/: __init__.py  attributes.py  menu.py  request_log.py  user.py
migrations/versions/: 3971b3109778_change_int_to_bool.py  5451c5df0ba3_init_migrate.py  6097b758f473_add_request_log.py  7ca8685c0b0c_add_is_manager.py  81c9982cf9c3_add_menu_owner.py  acc66ee6b3e5_add_authentication.py  af5a2a4f3307_add_user_email.py
templates/: admin_login.html
templates/admin/: custom_index.html  master.html  profile.html
tests/: __init__.py  conftest.py  test_admin.py  test_api_attributes.py  test_api_dishes.py  test_api_health.py  test_api_menus.py  test_auth.py  test_db_init.py  test_integration.py  test_request_log.py
