[tool.poetry]
name = "server-menu"
version = "0.2.0"
description = ""
authors = ["Matteo Spanio <spanio@dei.unipd.it>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
Flask = "^3.0.3"
Flask-Cors = "^4.0.1"
Flask-Migrate = "^4.0.7"
Flask-SQLAlchemy = "^3.1.1"
flask-admin = {extras = ["export", "images", "sqlalchemy-with-utils", "translation"], version = "^2.0.2"}
flask-limiter = "^4.1.1"
flask-jwt-extended = "^4.7.1"
flask-login = "^0.6.3"
flask-wtf = "^1.2.2"
flask-babel = "^4.0.0"


[tool.poetry.group.dev.dependencies]
pytest = "^9.0.2"
pytest-cov = "^7.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
