[tool.poetry]
name = "menu-api"
version = "0.2.1"
description = ""
authors = ["Matteo Spanio <spanio@dei.unipd.it>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
Flask = "^3.0.3"
Flask-Migrate = "^4.0.7"
Flask-SQLAlchemy = "^3.1.1"
flask-admin = {extras = ["export", "images", "sqlalchemy-with-utils", "translation"], version = "^2.0.2"}
flask-limiter = "^4.1.1"
flask-jwt-extended = "^4.7.1"
flask-login = "^0.6.3"
flask-wtf = "^1.2.2"
flask-babel = "^4.0.0"
gunicorn = "^23.0.0"
flask-cors = "^6.0.2"
flask-caching = "^2.3.1"
python-dotenv = "^1.2.1"
psycopg2-binary = "^2.9.11"
pymysql = "^1.1.2"


[tool.poetry.group.dev.dependencies]
pytest = "^9.0.2"
pytest-cov = "^7.0.0"
ruff = "^0.14.10"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
target-version = "py310"
line-length = 88
exclude = [
    ".git",
    ".venv",
    "__pycache__",
    "migrations",
    "instance",
    "backup",
]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "SIM",    # flake8-simplify
    "TCH",    # flake8-type-checking
    "PTH",    # flake8-use-pathlib
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # do not perform function calls in argument defaults
    "B904",   # raise without from inside except
]

[tool.ruff.lint.isort]
known-first-party = ["app"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
